Add changes for pytorch model for resnetv2

--- a/docs/source/en/serialization.mdx
+++ b/docs/source/en/serialization.mdx
@@ -93,6 +93,7 @@ Ready-made configurations include the following architectures:
 - Perceiver
 - PLBart
 - ResNet
+- ResNetv2v2
 - RoBERTa
 - RoFormer
 - SegFormer
